--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^4.0.1",
     "mysql":"*",
     "socket.io": "^1.3.5",
-    "express-session": "latest"
+    "express-session": "latest",
+    "docco": "latest"
   }
 }
